# Tarefases

./: CMakeLists.txt  GUI-gtk3.glade  README.md  cli.c  cli.h  cli_utils.c  dbg.h  gui.c  gui.h  gui_callbacks.c  gui_callbacks.h  main.c  tarefas_funcs.c  tarefas_funcs.h
src/: main.c  tarefas_funcs.c
src/cli/: cli.c  cli_utils.c  cli_utils.h
src/gui/: gui.c  gui.h  gui_callbacks.c
